# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/graphic/graphic_2d/graphic_config.gni")

module_out_path = "graphic_surface/surface"

group("unittest") {
  testonly = true

  deps = [
    ":buffer_client_producer_remote_test",
    ":buffer_manager_test",
    ":buffer_queue_consumer_test",
    ":buffer_queue_producer_remote_test",
    ":buffer_queue_producer_test",
    ":buffer_queue_test",
    ":buffer_shared_test",
    ":consumer_surface_test",
    ":native_buffer_test",
    ":native_window_test",
    ":producer_surface_test",
    ":surface_buffer_impl_test",
    ":surface_utils_test",
  ]
}

## UnitTest buffer_client_producer_remote_test {{{
ohos_unittest("buffer_client_producer_remote_test") {
  module_out_path = module_out_path

  sources = [ "buffer_client_producer_remote_test.cpp" ]

  deps = [ ":surface_test_common" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

## UnitTest buffer_client_producer_remote_test }}}

## UnitTest buffer_manager_test {{{
ohos_unittest("buffer_manager_test") {
  module_out_path = module_out_path

  sources = [ "buffer_manager_test.cpp" ]

  deps = [ ":surface_test_common" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

## UnitTest buffer_manager_test }}}

## UnitTest buffer_queue_consumer_test {{{
ohos_unittest("buffer_queue_consumer_test") {
  module_out_path = module_out_path

  sources = [ "buffer_queue_consumer_test.cpp" ]

  deps = [ ":surface_test_common" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

## UnitTest buffer_queue_consumer_test }}}

## UnitTest buffer_queue_producer_remote_test {{{
ohos_unittest("buffer_queue_producer_remote_test") {
  module_out_path = module_out_path

  sources = [ "buffer_queue_producer_remote_test.cpp" ]

  deps = [ ":surface_test_common" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

## UnitTest buffer_queue_producer_remote_test }}}

## UnitTest buffer_queue_producer_test {{{
ohos_unittest("buffer_queue_producer_test") {
  module_out_path = module_out_path

  sources = [ "buffer_queue_producer_test.cpp" ]

  deps = [ ":surface_test_common" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

## UnitTest buffer_queue_producer_test }}}

## UnitTest buffer_queue_test {{{
ohos_unittest("buffer_queue_test") {
  module_out_path = module_out_path

  sources = [ "buffer_queue_test.cpp" ]

  deps = [ ":surface_test_common" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

## UnitTest buffer_queue_test }}}

## UnitTest buffer_shared_test {{{
ohos_unittest("buffer_shared_test") {
  module_out_path = module_out_path

  sources = [ "buffer_shared_test.cpp" ]

  deps = [ ":surface_test_common" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

## UnitTest buffer_shared_test }}}

## UnitTest consumer_surface_test {{{
ohos_unittest("consumer_surface_test") {
  module_out_path = module_out_path

  sources = [ "consumer_surface_test.cpp" ]

  deps = [ ":surface_test_common" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

## UnitTest consumer_surface_test }}}

## UnitTest producer_surface_test {{{
ohos_unittest("producer_surface_test") {
  module_out_path = module_out_path

  sources = [ "producer_surface_test.cpp" ]

  deps = [ ":surface_test_common" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

## UnitTest producer_surface_test }}}

## UnitTest surface_buffer_impl_test {{{
ohos_unittest("surface_buffer_impl_test") {
  module_out_path = module_out_path

  sources = [ "surface_buffer_impl_test.cpp" ]

  deps = [ ":surface_test_common" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

## UnitTest surface_buffer_impl_test }}}

## UnitTest surface_utils_test {{{
ohos_unittest("surface_utils_test") {
  module_out_path = module_out_path

  sources = [ "surface_utils_test.cpp" ]

  deps = [ ":surface_test_common" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

## UnitTest surface_utils_test }}}

## UnitTest native_window_test {{{
ohos_unittest("native_window_test") {
  module_out_path = module_out_path

  sources = [ "native_window_test.cpp" ]

  deps = [ ":surface_test_common" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

## UnitTest native_window_test }}}

## UnitTest native_buffer_test {{{
ohos_unittest("native_buffer_test") {
  module_out_path = module_out_path

  sources = [ "native_buffer_test.cpp" ]

  deps = [ ":surface_test_common" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

## UnitTest native_buffer_test }}}

## Build surface_test_common.a {{{
config("surface_test_common_public_config") {
  include_dirs = [
    "$graphic_2d_root/frameworks/surface/include",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
    "//base/security/access_token/interfaces/innerkits/nativetoken/include",
    "//base/security/access_token/interfaces/innerkits/accesstoken/include",
    "//base/security/access_token/interfaces/innerkits/token_setproc/include",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Dprivate=public",
    "-Dprotected=public",
  ]
}

ohos_static_library("surface_test_common") {
  visibility = [ ":*" ]
  testonly = true

  public_configs = [ ":surface_test_common_public_config" ]

  public_deps = [
    "$graphic_2d_root:libnative_image",
    "$graphic_2d_root:libsurface",
    "$graphic_2d_root/utils:buffer_handle",
    "$graphic_2d_root/utils:libgraphic_utils",
    "$graphic_2d_root/utils:sync_fence",
    "//base/security/access_token/interfaces/innerkits/accesstoken:libaccesstoken_sdk",
    "//base/security/access_token/interfaces/innerkits/nativetoken:libnativetoken",
    "//base/security/access_token/interfaces/innerkits/token_setproc:libtoken_setproc",
    "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//third_party/googletest:gtest_main",
  ]
  subsystem_name = "graphic"
  part_name = "graphic_surface"
}
## Build surface_test_common.a }}}
