# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/graphic/graphic_surface/graphic_surface_config.gni")

module_out_path = "graphic_surface/graphic_surface/surface"

group("unittest") {
  testonly = true

  deps = [
    ":buffer_client_producer_remote_test",
    ":buffer_queue_consumer_test",
    ":buffer_queue_producer_remote_test",
    ":buffer_queue_producer_test",
    ":buffer_queue_test",
    ":buffer_utils_test",
    ":consumer_surface_delegator_test",
    ":consumer_surface_test",
    ":delegator_adapter_test",
    ":metadata_helper_test",
    ":native_buffer_test",
    ":native_window_test",
    ":producer_surface_delegator_test",
    ":producer_surface_test",
    ":surface_buffer_impl_test",
    ":surface_test",
    ":surface_type_test",
    ":surface_utils_test",
  ]
}

## UnitTest producer_surface_delegator_test {{{
ohos_unittest("producer_surface_delegator_test") {
  module_out_path = module_out_path

  sources = [ "producer_surface_delegator_test.cpp" ]

  deps = [
    ":surface_test_common",
    ":mock_dlfcn",
    "$graphic_surface_root/surface:surface_static",
  ]
  external_deps = [
    "bounds_checking_function:libsec_shared",
    "c_utils:utils",
    "ipc:ipc_single",
    "hilog:libhilog",
  ]
}

## UnitTest producer_surface_delegator_test }}}

## UnitTest consumer_surface_delegator_test {{{
ohos_unittest("consumer_surface_delegator_test") {
  module_out_path = module_out_path

  sources = [ "consumer_surface_delegator_test.cpp" ]

  deps = [
    ":surface_test_common",
    ":mock_dlfcn",
    "$graphic_surface_root/surface:surface_static",
  ]
  external_deps = [
    "bounds_checking_function:libsec_shared",
    "c_utils:utils",
    "ipc:ipc_single",
    "hilog:libhilog",
  ]
}

## UnitTest consumer_surface_delegator_test }}}

## UnitTest buffer_client_producer_remote_test {{{
ohos_unittest("buffer_client_producer_remote_test") {
  module_out_path = module_out_path

  sources = [ "buffer_client_producer_remote_test.cpp" ]

  deps = [
    ":surface_test_common",
    "$graphic_surface_root/surface:surface_static",
  ]
  external_deps = [
    "cJSON:cjson_static",     
    "selinux_adapter:librestorecon",
    "samgr:samgr_proxy",
    "ipc:ipc_single",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "hilog:libhilog",
  ]
}

## UnitTest buffer_client_producer_remote_test }}}

## UnitTest buffer_queue_consumer_test {{{
ohos_unittest("buffer_queue_consumer_test") {
  module_out_path = module_out_path

  sources = [ "buffer_queue_consumer_test.cpp" ]

  deps = [
    ":surface_test_common",
    "$graphic_surface_root/surface:surface_static",
  ]
  external_deps = [
    "bounds_checking_function:libsec_shared",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]
}

## UnitTest buffer_queue_consumer_test }}}

## UnitTest buffer_queue_producer_remote_test {{{
ohos_unittest("buffer_queue_producer_remote_test") {
  module_out_path = module_out_path

  sources = [ "buffer_queue_producer_remote_test.cpp" ]

  deps = [
    ":surface_test_common",
    "$graphic_surface_root/surface:surface_static",
  ]
  external_deps = [
    "samgr:samgr_proxy",
    "ipc:ipc_single",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "hilog:libhilog",
  ]
}

## UnitTest buffer_queue_producer_remote_test }}}

## UnitTest buffer_queue_producer_test {{{
ohos_unittest("buffer_queue_producer_test") {
  module_out_path = module_out_path

  sources = [ "buffer_queue_producer_test.cpp" ]

  deps = [
    ":surface_test_common",
    "$graphic_surface_root/surface:surface_static",
  ]
  external_deps = [
    "c_utils:utils",
    "ipc:ipc_single",
    "hilog:libhilog",
  ]
}

## UnitTest buffer_queue_producer_test }}}

## UnitTest buffer_queue_test {{{
ohos_unittest("buffer_queue_test") {
  module_out_path = module_out_path

  sources = [ "buffer_queue_test.cpp" ]

  deps = [
    ":surface_test_common",
    "$graphic_surface_root/surface:surface_static",
  ]
  external_deps = [
    "c_utils:utils",
    "ipc:ipc_single",
    "hilog:libhilog",
  ]
}

## UnitTest buffer_queue_test }}}

## UnitTest consumer_surface_test {{{
ohos_unittest("consumer_surface_test") {
  module_out_path = module_out_path

  sources = [ "consumer_surface_test.cpp" ]

  deps = [
    ":surface_test_common",
    "$graphic_surface_root/surface:surface_static",
  ]

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "drivers_interface_display:display_commontype_idl_headers_1.1",
    "c_utils:utils",
    "ipc:ipc_single",
    "hilog:libhilog",
  ]
}

## UnitTest consumer_surface_test }}}

## UnitTest delegator_adapter_test {{{
ohos_unittest("delegator_adapter_test") {
  module_out_path = module_out_path

  sources = [ "delegator_adapter_test.cpp" ]

  deps = [
    ":surface_test_common",
    ":mock_dlfcn",
    "$graphic_surface_root/surface:surface_static",
  ]
  external_deps = [
    "bounds_checking_function:libsec_shared",
    "c_utils:utils",
    "ipc:ipc_single",
    "hilog:libhilog",
  ]
}

## UnitTest delegator_adapter_test }}}

## UnitTest producer_surface_test {{{
ohos_unittest("producer_surface_test") {
  module_out_path = module_out_path

  sources = [ "producer_surface_test.cpp" ]

  deps = [
    ":surface_test_common",
    "$graphic_surface_root/surface:surface_static",
  ]
  external_deps = [
    "bounds_checking_function:libsec_shared",
    "drivers_interface_display:display_commontype_idl_headers_1.1",
    "c_utils:utils",
    "ipc:ipc_single",
    "hilog:libhilog",
  ]
}

## UnitTest producer_surface_test }}}

## UnitTest surface_buffer_impl_test {{{
ohos_unittest("surface_buffer_impl_test") {
  module_out_path = module_out_path

  sources = [ "surface_buffer_impl_test.cpp" ]

  deps = [
    ":surface_test_common",
    "$graphic_surface_root/surface:surface_static",
  ]

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "drivers_interface_display:display_commontype_idl_headers_1.1",
    "c_utils:utils",
    "ipc:ipc_single",
    "hilog:libhilog",
  ]
}

## UnitTest surface_buffer_impl_test }}}

## UnitTest surface_utils_test {{{
ohos_unittest("surface_utils_test") {
  module_out_path = module_out_path

  sources = [ "surface_utils_test.cpp" ]

  deps = [
    ":surface_test_common",
    "$graphic_surface_root/surface:surface_static",
  ]
  external_deps = [
    "bounds_checking_function:libsec_shared",
    "c_utils:utils",
    "ipc:ipc_single",
    "hilog:libhilog",
  ]
}

## UnitTest surface_utils_test }}}

## UnitTest native_window_test {{{
ohos_unittest("native_window_test") {
  module_out_path = module_out_path

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "eventhandler:libeventhandler",
    "ipc:ipc_capi",
    "samgr:samgr_proxy",
    "c_utils:utils",
    "hilog:libhilog",
  ]

  deps = [
    ":surface_test_common",
    "$graphic_surface_root/surface:surface",
  ]
}

## UnitTest native_window_test }}}

## UnitTest metadata_helper_test {{{
ohos_unittest("metadata_helper_test") {
  module_out_path = module_out_path

  sources = [ "metadata_helper_test.cpp" ]

  deps = [
    ":surface_test_common",
    "$graphic_surface_root/surface:surface_static",
  ]
  defines = []
  if (defined(graphic_surface_feature_tv_metadata_enable) && graphic_surface_feature_tv_metadata_enable) {
      defines += [ "RS_ENABLE_TV_PQ_METADATA" ]
  }
  external_deps = [
    "c_utils:utils",
    "drivers_interface_display:display_commontype_idl_headers",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]
}

## UnitTest metadata_helper_test }}}

## UnitTest native_buffer_test {{{
ohos_unittest("native_buffer_test") {
  module_out_path = module_out_path

  sources = [ "native_buffer_test.cpp" ]

  deps = [
    ":surface_test_common",
    "$graphic_surface_root/surface:surface_static",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_capi",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]
}

## UnitTest native_buffer_test }}}

## UnitTest buffer_utils_test {{{
ohos_unittest("buffer_utils_test") {
  module_out_path = module_out_path

  sources = [ "buffer_utils_test.cpp" ]

  deps = [
    ":surface_test_common",
    "$graphic_surface_root/surface:surface_static",
  ]
  external_deps = [
    "ipc:ipc_single",
    "hilog:libhilog",
  ]
}

## UnitTest buffer_utils_test }}}

## UnitTest surface_test {{{
ohos_unittest("surface_test") {
  module_out_path = module_out_path

  sources = [ "surface_test.cpp" ]

  deps = [
    ":surface_test_common",
    "$graphic_surface_root/surface:surface_static",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]
}

## UnitTest surface_test }}}

## UnitTest surface_type_test {{{
ohos_unittest("surface_type_test") {
  module_out_path = module_out_path

  sources = [ "surface_type_test.cpp" ]

  deps = [
    ":surface_test_common",
    "$graphic_surface_root/surface:surface_static",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

## UnitTest surface_type_test }}}

## Build surface_test_common.a {{{
config("surface_test_common_public_config") {
  include_dirs = [ "../../include" ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Dprivate=public",
    "-Dprotected=public",
  ]
}

ohos_source_set("mock_dlfcn") {
  testonly = true

  sources = [ "delegator_mock.cpp" ]

  include_dirs = [
    ".",
    "../../include",
  ]

  deps = [
    "$graphic_surface_root/buffer_handle:buffer_handle_static",
    "$graphic_surface_root/surface:surface_static",
    "$graphic_surface_root/sync_fence:sync_fence_static",
    "$graphic_surface_root/test_header:test_header",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]
}

ohos_static_library("surface_test_common") {
  visibility = [ ":*" ]
  testonly = true

  public_configs = [ ":surface_test_common_public_config" ]

  deps = [
    "$graphic_surface_root/buffer_handle:buffer_handle_static",
    "$graphic_surface_root/surface:surface_static",
    "$graphic_surface_root/sync_fence:sync_fence_static",
    "$graphic_surface_root/test_header:test_header",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "graphic"
  part_name = "graphic_surface"
}
## Build surface_test_common.a }}}
