# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/graphic/graphic_surface/graphic_surface_config.gni")

module_out_path = "graphic_surface/graphic_surface/sync_fence"

group("unittest") {
  testonly = true

  deps = [ ":sync_fence_test" ]
}

## UnitTest sync_fence_test {{{
ohos_unittest("sync_fence_test") {
  module_out_path = module_out_path

  sources = [
    "acquire_fence_manager_test.cpp",
    "frame_sched_test.cpp",
    "sync_fence_tracker_test.cpp",
  ]

  deps = [
    ":sync_fence_common",
    "$graphic_surface_root/sync_fence:sync_fence_static",
  ]

  external_deps = [
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]
}

## UnitTest sync_fence_test }}}

## Build sync_fence_common.a {{{
config("sync_fence_common_public_config") {
  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Dprivate=public",
    "-Dprotected=public",
  ]
}

ohos_static_library("sync_fence_common") {
  visibility = [ ":*" ]
  testonly = true

  public_configs = [ ":sync_fence_common_public_config" ]

  subsystem_name = "graphic"
  part_name = "graphic_surface"
}
## Build sync_fence_common.a }}}
